components/core/base/networking/traefik/dashboard/ingress.yaml
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: traefik-dashboard
#  namespace: networking
#  annotations:
#    cert-manager.io/cluster-issuer: "letsencrypt-production"
#    hajimari.io/appName: "traefik"
#    hajimari.io/enable: "true"
#    hajimari.io/icon: "web"
#    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
#spec:
#  ingressClassName: "traefik"
#  tls:
#    - hosts:
#        - "traefik.k8s"
#      secretName: "traefik-dashboard-tls"
#  rules:
#    - host: "traefik.k8s"
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: traefik
#                port:
#                  number: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DEV_DOMAIN}`) 
      kind: Rule
      middlewares:
        - name: middlewares-basic-auth
          namespace: networking
      services:
        - name: api@internal
          kind: TraefikService
